--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "serve": "node -r esm src/server.js"
   },
   "dependencies": {
+    "boardgame.io": "^0.49.6",
+    "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.44.0"
+  },
+  "devDependencies": {
+    "esm": "^3.2.25"
   }
 }
