--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.44.0"
+    "sass": "^1.44.0",
+    "yup": "0.32.11",
+    "@hookform/resolvers": "2.8.4",
+    "bcryptjs": "2.4.3",
+    "jsonwebtoken": "8.5.1",
+    "express-jwt": "6.1.0",
+    "react-hook-form": "7.21.0"
   },
   "devDependencies": {
     "esm": "^3.2.25"
